--- a/home/src/main/resources/mail/templates/password-reset-mobile-el.html
+++ b/home/src/main/resources/mail/templates/password-reset-mobile-el.html
@@ -5,13 +5,13 @@
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
 <style>
 .content {
-    width: 600px;
+    max-width: 600px;
     margin-left: auto;
     margin-right: auto;
 }
 
 .inner-content {
-    width: 600px;
+    max-width: 600px;
     margin-left: auto;
     margin-right: auto;
 }
